--- a/src/components/SidebarCS2.astro
+++ b/src/components/SidebarCS2.astro
@@ -7,63 +7,13 @@ const sidebarItems = [
 		items: [
 			{ name: 'Building', href: '/asset/building/' },
 			{ name: 'Prop', href: '/asset/prop/' },
-			{ name: 'Tree', href: '/asset/tree' },
-			{ name: 'Vehicle', href: '/asset/vehicle' },
-			{ name: 'Citizen', href: '/asset/citizen' },
-			{ name: 'Network', href: '/asset/network' },
-			{ name: 'Theme', href: '/theme' },
-			{ name: 'LUT', href: '/lut' },
-		],
-	},
-
-	{
-		category: 'BASIC',
-		items: [
-			{ name: 'No Workshop', href: '/noworkshop' },
-			{ name: 'Normal Maps', href: '/normal-maps' },
-			{ name: 'Scale', href: '/scale' },
-		],
-	},
-	{
-		category: 'MODTOOLS',
-		items: [
-			{ name: 'ModTools', href: '/modtools' },
-			{ name: 'Scripts', href: '/scripts' },
-			{ name: 'Dump Assets', href: '/dump' },
-			{ name: 'Writing Scripts', href: '/scripting' },
-		],
-	},
-	{
-		category: 'SHADERS',
-		items: [
-			{ name: 'Decal', href: '/shader/decal' },
-			{ name: 'Rotors Props & Buildings', href: '/shader/rotors' },
-			{ name: 'Rotors Vehicle Glass', href: '/shader/rotors-vehicle' },
-			{ name: 'Rotors Propellers', href: '/shader/rotors-propellers' },
-			{ name: 'AnimUV', href: '/shader/animuv' },
-			{ name: 'PropRotating', href: '/shader/proprotating' },
-			{ name: 'Flag', href: '/shader/flag' },
-			{ name: 'Vehicle Wheels', href: '/shader/vehicle-wheels' },
-		],
-	},
-	{
-		category: 'MOD-SPECIFIC',
-		items: [
-			{ name: 'Ploppable Asphalt +', href: '/mod/ploppable-asphalt' },
-			{ name: 'Additive Shader', href: '/mod/additive-shader' },
-			{ name: 'Custom Animation Loader', href: '/mod/custom-animation-loader' },
-			{ name: 'Custom Effect Loader', href: '/mod/custom-effect-loader' },
-			{ name: 'Detail', href: '/mod/detail' },
 		],
 	},
 	{
 		category: 'OTHER',
 		items: [
-			{ name: 'Tutorials', href: '/tutorials' },
-			{ name: 'Source Files', href: '/files' },
-			{ name: 'Output Log Decrufter', href: '/decruft' },
-			{ name: 'Search', href: '/search' },
-			{ name: 'About', href: '/about' },
+			{ name: 'About', href: '/cs2/about' },
+			{ name: 'Search', href: '/cs2/search' },
 		],
 	},
 ];
@@ -104,12 +54,12 @@ const sidebarItems = [
 		</div>
 		<ul>
 			<li>
-				<a href="/" class="inline-flex mt-2 p-2 w-full rounded-lg group text-hit-gray-400 bg-hit-gray-900 border-2 border-hit-gray-700 hover:text-hoverlink">
+				<a href="/" class="inline-flex mt-2 p-2 w-full rounded-lg group hover:text-hoverlink text-hit-gray-700 bg-hit-gray-950">
 					<span>CS I Modding</span>
 				</a>
 			</li>
 			<li>
-				<a href="/cs2" class="inline-flex mt-2 p-2 w-full rounded-lg group hover:text-hoverlink text-hit-gray-700 bg-hit-gray-950">
+				<a href="/cs2" class="inline-flex mt-2 p-2 w-full rounded-lg group text-hit-gray-400 bg-hit-gray-900 border-2 border-hit-gray-700 hover:text-hoverlink">
 					<span>CS II Modding</span>
 				</a>
 			</li>
