--- a/src/pages/cs2/search.astro
+++ b/src/pages/cs2/search.astro
@@ -1,10 +1,10 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
-import TableOfContents from '../components/TableOfContents.astro';
+import MainLayoutCS2 from '../../layouts/MainLayoutCS2.astro';
+import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Search - Cities Skylines Modding';
 ---
 
-<MainLayout title={title}>
+<MainLayoutCS2 title={title}>
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<div class="content">
 			<h2 class="border-b-2 border-hit-gray-600 pb-8 text-4xl font-medium text-hit-gray-400" id="about">Search</h2>
@@ -22,4 +22,4 @@ const title = 'Search - Cities Skylines Modding';
 			</script>
 		</div>
 	</section>
-</MainLayout>
+</MainLayoutCS2>
