--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -130,7 +130,7 @@ const itemlinks = [
 	<section class="py-12 sm:ml-64">
 		<h1 class="text-2xl font-bold text-title mb-6">Cities: Skylines I</h1>
 
-		<div class="grid grid-cols-2 lg:grid-cols-4 border-2 border-hit-gray-950 rounded-lg">
+		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 border-2 border-hit-gray-950 rounded-lg">
 			{
 				itemlinks.map((item) => (
 					<a href={item.href} class="inline-flex flex-col group p-8 items-center justify-start text-center mb-4">
