--- a/src/pages/cs2/about.astro
+++ b/src/pages/cs2/about.astro
@@ -1,11 +1,11 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
-import Link from '../components/Link.astro';
-import TableOfContents from '../components/TableOfContents.astro';
+import MainLayoutCS2 from '../../layouts/MainLayoutCS2.astro';
+import Link from '../../components/Link.astro';
+import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'About - Cities Skylines Modding';
 ---
 
-<MainLayout title={title}>
+<MainLayoutCS2 title={title}>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<div class="content">
@@ -34,4 +34,4 @@ const title = 'About - Cities Skylines Modding';
 			</p>
 		</div>
 	</section>
-</MainLayout>
+</MainLayoutCS2>
