--- a/src/pages/cs2/index.astro
+++ b/src/pages/cs2/index.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '../../layouts/MainLayout.astro';
+import MainLayoutCS2 from '../../layouts/MainLayoutCS2.astro';
 import { Icon } from 'astro-icon';
 
 const itemlinks = [
@@ -54,11 +54,11 @@ const itemlinks = [
 ];
 ---
 
-<MainLayout>
+<MainLayoutCS2>
 	<section class="py-12 sm:ml-64">
 		<h1 class="text-2xl font-bold text-title mb-6">Cities: Skylines II</h1>
 
-		<div class="grid grid-cols-2 lg:grid-cols-4 border-2 border-hit-gray-950 rounded-lg">
+		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 border-2 border-hit-gray-950 rounded-lg">
 			{
 				itemlinks.map((item) => (
 					<a href={item.href} class="inline-flex flex-col group p-8 items-center justify-start text-center mb-4">
@@ -70,4 +70,4 @@ const itemlinks = [
 			}
 		</div>
 	</section>
-</MainLayout>
+</MainLayoutCS2>
