--- a/src/components/SidebarCS2.astro
+++ b/src/components/SidebarCS2.astro
@@ -59,7 +59,10 @@ const sidebarItems = [
 				</a>
 			</li>
 			<li>
-				<a href="/cs2" class="inline-flex mt-2 p-2 w-full rounded-lg group text-hit-gray-400 bg-hit-gray-900 border-2 border-hit-gray-700 hover:text-hoverlink">
+				<a
+					href="/cs2"
+					class="inline-flex font-bold mt-2 p-2 w-full rounded-lg group text-hit-gray-300 bg-hit-gray-900 border-2 border-hit-gray-700 hover:text-hoverlink"
+				>
 					<span>CS II Modding</span>
 				</a>
 			</li>
