--- a/src/pages/noworkshop.astro
+++ b/src/pages/noworkshop.astro
@@ -2,6 +2,8 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import TableOfContents from '../components/TableOfContents.astro';
 const title = 'No Workshop & Local Mods - Cities Skylines Modding';
+import ResponsiveImage from '../components/ResponsiveImage.astro';
+import { images } from '../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
@@ -27,9 +29,20 @@ const title = 'No Workshop & Local Mods - Cities Skylines Modding';
 						>
 					</p><p class="mt-4">This shortcut can now be used to launch the game in no workshop mode.</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/TzAFFTB.jpg" target="null"><img src="https://i.imgur.com/TzAFFTB.jpg" /></a><p class="explanation">
-						Create shortcut window.
-					</p>
+					<a href="/images/nows/shortc.jpg" target="_blank">
+						<ResponsiveImage
+							src={images.shortc}
+							naturalHeight={454}
+							naturalWidth={614}
+							srcWidths={[300, 400, 500, 600]}
+							alt="Create shortcut window"
+							format="webp"
+							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
+							class="h-auto w-full aspect-video object-cover"
+							loading="eager"
+						/></a
+					>
+					<p class="explanation">Create shortcut window.</p>
 				</div>
 			</div>
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="local-mods-assets">Local Mods &amp; Assets</h2>
